fix: increase margin-top of info icon for improved spacing

--- a/app/Vehicle/static/css/vehicle.css
+++ b/app/Vehicle/static/css/vehicle.css
@@ -262,7 +262,7 @@ body {
   border-radius: 50%;
   padding: 2px 4px;
   box-shadow: 0 2px 6px #0002;
-  margin-top: 30px;
+  margin-top: 60px;
 }
 
 .icon-legend {
